--- a/src/app/templates/sidenav/sidenav.component.html
+++ b/src/app/templates/sidenav/sidenav.component.html
@@ -1,10 +1,20 @@
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-    <mat-toolbar color="primary" class="example-toolbar">
+<div class="main-container" [class.is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
+
+    <mat-toolbar color="primary" class="side-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-      <h1 class="example-app-name">Responsive App</h1>
-    </mat-toolbar>
+     <span class="app-link">My App</span>
+     <span class="app-link">nav 1</span>
+     <span class="app-link">nav 2</span>
+     <span class="nav-spacer"></span>
+     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+       <mat-icon>favorite</mat-icon>
+     </button>
+     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>
+   </mat-toolbar>
   
-    <mat-sidenav-container class="example-sidenav-container"
+    <mat-sidenav-container class="sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
