--- a/src/app/templates/sidenav/sidenav.component.sass
+++ b/src/app/templates/sidenav/sidenav.component.sass
@@ -1,35 +1,2 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css"
-
-body
-  font-family: Roboto, Arial, sans-serif
-  margin: 0
-
-.basic-container
-  padding: 30px
-
-.version-info
-  font-size: 8pt
-  float: right
-  margin: 8px
-  
-.example-container
-  display: flex
-  flex-direction: column
-  position: absolute
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-
-.example-is-mobile .example-toolbar
-  position: fixed
-  z-index: 2
-
-h1.example-app-name
-  margin-left: 8px
-
-.example-sidenav-container
-  flex: 1
-
-.example-is-mobile .example-sidenav-container
-  flex: 1 0 auto
+.app-link
+  margin-right: 40px
