--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,4 @@
-.example-container
+.main-container
   display: flex
   flex-direction: column
   position: absolute
@@ -7,15 +7,17 @@
   left: 0
   right: 0
 
-.example-is-mobile .example-toolbar
+.is-mobile .side-toolbar
   position: fixed
   z-index: 2
 
-h1.example-app-name
+h1.app-name
   margin-left: 8px
 
-.example-sidenav-container
+.sidenav-container
   flex: 1
 
-.example-is-mobile .example-sidenav-container
+.is-mobile .sidenav-container
   flex: 1 0 auto
+.nav-spacer
+  flex: 1 1 auto
