--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-sidenav>
-
-    <p *ngFor="let content of fillerContent">{{content}}</p>
+    <router-outlet></router-outlet>
     <app-footer></app-footer>
 </app-sidenav>
