--- a/src/app/templates/sidenav/sidenav.component.html
+++ b/src/app/templates/sidenav/sidenav.component.html
@@ -2,8 +2,8 @@
 
     <mat-toolbar color="primary" class="side-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-     <span class="app-link">My App</span>
-     <span class="app-link">nav 1</span>
+     <span class="app-link" routerLink="/home" >Home</span>
+     <span class="app-link" routerLink="/posts" >Posts</span>
      <span class="app-link">nav 2</span>
      <span class="nav-spacer"></span>
      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
@@ -19,7 +19,7 @@
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-          <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+          <a mat-list-item [routerLink]="nav" *ngFor="let nav of fillerNav">{{nav}}</a>
         </mat-nav-list>
       </mat-sidenav>
   
