--- a/src/styles.sass
+++ b/src/styles.sass
@@ -24,3 +24,11 @@ h1.app-name
 
 .app-link
   cursor: pointer
+
+
+.footer_container
+  position: fixed
+  bottom: 0
+  background-color: red
+  display: block
+  width: 100% 
