--- a/src/posts/posts.component.sass
+++ b/src/posts/posts.component.sass
@@ -1,2 +1,11 @@
-mat-card-title
-  font-weight: bold
+:host
+  display: block
+  margin: 20px
+  .search-post-form
+    min-width: 150px
+    max-width: 500px
+    width: 100%
+
+  .search-post-form  
+    .full-width 
+      width: 100%
