add infinite scroll

--- a/src/templates/sidenav/sidenav.component.html
+++ b/src/templates/sidenav/sidenav.component.html
@@ -4,6 +4,7 @@
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
      <span class="app-link" routerLink="/home" >Home</span>
      <span class="app-link" routerLink="/posts" >Posts</span>
+     <span class="app-link" routerLink="/infinitescroll" >Infinite scroll</span>
      <span class="app-link">nav 2</span>
      <span class="nav-spacer"></span>
      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
