--- a/src/app/templates/sidenav/sidenav.component.html
+++ b/src/app/templates/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
 
     <mat-toolbar color="primary" class="side-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-     <span class="app-link" routerLink="/home" >Home</span>
+     <span class="app-link" routerLink="/" >Home</span>
      <span class="app-link" routerLink="/posts" >Posts</span>
      <span class="app-link" routerLink="/infinitescroll" >Infinite scroll</span>
      <span class="app-link" routerLink="/reactiveform" >Reactive form</span>
