--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -6,7 +6,7 @@
         <div *ngIf="f.email.touched && f.email.errors" class="invalid-feedback">
           <div *ngIf="f.email.errors.required">Email is required</div>
           <div *ngIf="f.email.errors.email">Email is not valid </div>
-        </div>
+                </div>
       </div>
       <div class="form-group col-md-6">
         <label for="inputPassword4">Password</label>
@@ -71,7 +71,7 @@
         <div *ngIf="submitted && f.acceptTerms.errors" class="invalid-feedback">Accept Ts & Cs is required</div>
       </div>
     </div>
-    <button-component [type]="'button'" [classes]="'btn-secondary'" (clicked)="onReset($event)" >Cancel</button-component>
-    <button-component [type]="'submit'" [classes]="'btn-primary'" (clicked)="onReset($event)" [isdisabled]='registerForm.invalid' >Sign in</button-component>
+    <app-button-component [type]="'button'" [classes]="'btn-secondary'" (clicked)="onReset($event)" >Cancel</app-button-component>
+    <app-button-component [type]="'submit'" [classes]="'btn-primary'" (clicked)="onReset($event)" [isdisabled]='registerForm.invalid' >Sign in</app-button-component>
   </form>
   
